# trubrics-sdk

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  my_new_trubric.json  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: checks.yml  docs.yml  main.yml  release.yml  test.yml  test_release.yml
assets/: trubrics-init-gif.yml  trubrics-run-gif.yml
assets/tests/: classifier_test_data.csv  classifier_test_model.pkl  classifier_test_trubric.json  classifier_train_data.csv  test_feature_importance.json  validator_test_data.csv  validator_test_trubric.json
demo/notebooks/: bare-bones.ipynb  titanic-demo.ipynb
demo/streamlit/: app-titanic.py  config.py
docs/: Makefile.md  classifier_tutorial.md  context.md  custom_validations.md  dash.md  data_context.md  features.md  feedback.md  flask_example.md  index.md  log_trubrics.md  metrics.md  mlflow.md  models.md  react_js.md  run_trubrics.md  save_trubric.md  streamlit.md  train_titanic.md  trubrics_cli.md  tutorials.md  validations.md  validator_object.md
docs/data/: feedback.json  preprocessed_train.csv  trubric.json
docs/integrations/: dash.md  flask_example.md  gradio.md  langchain.md  mlflow.md  react_js.md  streamlit.md
docs/notebooks/: titanic-demo.html  titanic-full-demo.html
docs/platform/: account_setup.md  feedback_components.md  issues.md  user_feedback.md  user_prompts.md
docs/snippets/: create_trubric.md  create_validations.md  init_datacontext.md  init_modelcontext.md  install.md  save_trubric.md  streamlit_feedback.md  trubrics_cli.md
docs/source/: bare.nblink  classifier.nblink  conf.py  index.md  regressor.nblink
docs/stylesheets/: extra.css
docs/trubrics_platform/: account_setup.md  feedback_components.md  insights.md  issues.md
docs/validations/: custom_validations.md  data_context.md  metrics.md  models.md  save_trubric.md  trubrics_cli.md  tutorials.md  validations.md
examples/: app_generate_trubric.py  firestore_workflow.ipynb  sdk_test.py  trubric_run.py  trubrics_config.py
examples/LLMs/: app.py  langchain.ipynb  requirements.txt
examples/classification_titanic/: .trubrics_config.json  atf-titanic-demo.ipynb  classification-bare-bones-demo.ipynb  classification-full-demo.ipynb  classification_full_demo.ipynb  custom_validator.py  feedack_app_titanic.py  my_first_trubric.json  my_new_trubric.json  slicing_functions.py  titanic-bare-bones-demo.ipynb  titanic-custom-example.ipynb  titanic-demo.ipynb  titanic-full-demo.ipynb  titanic-save-ui.ipynb  trubric_run.py  trubrics_platform_demo.ipynb
examples/cli/: .trubrics_config.json  custom_scorer.py  custom_validator.py  slicing_functions.py  trubric_run.py
examples/data/: example_trubric.json
examples/feedback_apps/: custom_example.py  python_sdk.py
examples/flask/: flask_app.py
examples/mlflow/: mlflow-trubrics.ipynb  my_first_trubric.json  my_second_trubric.json
examples/notebooks/: bare-bones.ipynb  house-prices-demo.ipynb  titanic-demo.ipynb
examples/react_js/: .env_example  README.md  package-lock.json
examples/regression_house_prices/: house-prices-demo.ipynb  house_prices_demo.ipynb
examples/streamlit/: app-titanic.py  app_generate_trubric.py  basic_app.py  config.py  feedback_basic_app.py  llm_app.py  llm_chatbot.py  llm_chatbot_stream.py  requirements.txt  titanic_app.py  trubrics_utils.py
examples/timeseries_store_sales/: feedback_app.py  store-sales-eda-xgb.ipynb
examples/training/: config.py  house_prices_config.py  titanic.py  titanic_config.py
mlting/: README.md  base.py  mlting.py
mlting/components/: __init__.py  streamlit.py
mlting/mltests/: explainability.py  fairness.py  performance.py  robustness.py
mlting/utils/: loader.py  model.py  tester.py
server/: README.md
tests/: conftest.py  test_context.py
tests/test_feedback/: test_feedback_streamlit.py
tests/test_validations/: test_custom_model.py  test_run.py  test_validator_with_classifier.py
tests/test_validators/: test_base.py  test_classifier.py  test_custom_model.py  test_run.py  test_validator_with_classifier.py
trubrics/: __init__.py  base.py  cli.py  config.py  context.py  exceptions.py  logger.py  main.py
trubrics/cli/: main.py  project.py  run.py  run_context.py
trubrics/components/: base.py  streamlit.py
trubrics/example/: __init__.py  app_titanic_dash.py  app_titanic_gradio.py  app_titanic_streamlit.py  feedback_app_titanic.py  my_first_trubric.json  requirements.txt  titanic.py  titanic_config.py  titanic_gradio.py  (+1 more)
(+115 files in other folders)
