[project]
name = "trubrics"
version = "v1.7.0"
requires-python = ">=3.10"
authors = [
  { name="Jeff Kayne", email="jeff.kayne@trubrics.com" },
]
description = "Python SDK to track events in Trubrics."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
]

[tool.uv]
package = true
dev-dependencies = [
    "pre-commit==3.6.0",
    "mypy==1.8.0",
    "ruff==0.9.4",
]

[tool.ruff]
line-length = 88
target-version = "py310"
include = ["trubrics/**/*.py"]

[tool.mypy]
mypy_path = ["trubrics"]
