[project]
name = "trubrics"
version = "1.7.7"
requires-python = ">=3.10"
license = { text = "Apache 2.0" }
authors = [
  { name="Jeff Kayne", email="jeff.kayne@trubrics.com" },
]
description = "Python SDK to track events in Trubrics."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["trubrics"]


[tool.uv]
dev-dependencies = [
    "pre-commit==3.6.0",
    "mypy==1.8.0",
    "ruff==0.9.4",
]

[tool.ruff]
line-length = 88
target-version = "py310"
include = ["trubrics/**/*.py"]

[tool.mypy]
mypy_path = ["trubrics"]
