[metadata]
name = trubrics
version = 1.3.2
description = Combine data science knowledge with business user feedback to validate machine learning.
long_description = Full documentation available at https://trubrics.github.io/trubrics-sdk/.

[options]
packages = find:
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    trubrics = trubrics.cli.main:app

[options.packages.find]
exclude =
    tests*

# typing & package data
[options.package_data]
* = *.typed, *.csv, *.json

# linting
[flake8]
max-line-length = 120
[isort]
profile = black

# integrations
[options.extras_require]
streamlit = streamlit>=1.11.1,<1.18.0
dash = dash>=2.6.2; dash-bootstrap-components>=1.2.1
gradio = gradio>=3.8.1
