[metadata]
name = trubrics
version = 1.4.4
description = The first user insights platform for AI models.
long_description = Full documentation available at https://trubrics.github.io/trubrics-sdk/.

[options]
packages = find:
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    trubrics = trubrics.cli.main:app
mlflow.model_evaluator =
    trubrics = trubrics.integrations.mlflow.trubrics_validator:TrubricsValidator

[options.packages.find]
exclude =
    tests*

# typing & package data
[options.package_data]
* = *.typed, *.csv, *.json

# linting
[flake8]
max-line-length = 120
[isort]
profile = black

# integrations
[options.extras_require]
streamlit = streamlit>=1.20.0; streamlit-feedback>=0.0.8
dash = dash>=2.6.2; dash-bootstrap-components>=1.2.1
gradio = gradio>=3.8.1
mlflow = mlflow>=2.0.0
validations = GitPython>=3.1.31; numpy>=1.21.6; pandas>=1.3.5; scikit-learn>=1.0.0,<1.1.0
