[metadata]
name = trubrics
version = 1.6.0
description = The first user analytics platform for AI models.
long_description = Full documentation available at https://trubrics.github.io/trubrics-sdk/.

[options]
packages = find:
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    trubrics = trubrics.cli.main:app
mlflow.model_evaluator =
    trubrics = trubrics.integrations.mlflow.trubrics_validator:TrubricsValidator

[options.packages.find]
exclude =
    tests*

# typing & package data
[options.package_data]
* = *.typed, *.csv, *.json

# linting
[flake8]
max-line-length = 120
[isort]
profile = black

# integrations
[options.extras_require]
streamlit = streamlit>=1.20.0; streamlit-feedback==0.1.2
